--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,10 +4,38 @@
   <meta charset="UTF-8">
   <title>Angular App</title>
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
+  <style type="text/css">
+    [ng-cloak] {
+      display: none;
+    }
+  </style>
+  <script src="/bundle.js"></script>
   <base href="/">
 </head>
-<body>
-  <app></app>
+<body ng-cloak>
+
+  <div layout="column" layout-fill>
+
+    <md-toolbar md-scroll-shrink="true">
+      <div class="md-toolbar-tools">
+        <md-button class="md-icon-button" aria-label="Settings">
+          <ng-md-icon icon="menu"></ng-md-icon>
+        </md-button>
+        <span>Angular Webpack Boom</span>
+        <span flex></span>
+        <md-button>Right</md-button>
+      </div>
+    </md-toolbar>
+
+    <md-content>
+      <div layout="column" flex tabIndex="-1" role="main">
+        <app-main></app-main>
+        <main-app-component></main-app-component>
+      </div>
+    </md-content>
+
+  </div>
+
 </body>
 </html>
