--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,8 @@
 <html ng-app="app" lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Angular Material App</title>
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
   <style type="text/css">
