Switching over to ui-router for nested routes and named views.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,16 +7,18 @@
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
   <style type="text/css">
-    [ng-cloak] {
-      display: none;
+    [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+      display: none !important;
     }
   </style>
   <base href="/">
 </head>
 <body ng-cloak>
 
-  <!-- main layout into app component -->
-  <app-main></app-main>
+  <div>
+    <!-- ui router controls main view -->
+    <ui-view></ui-view>
+  </div>
 
 </body>
 </html>
